Fixed menu position on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -662,6 +662,10 @@ p.tableblock {
         display: none;
     }
 
+    #headline > div {
+        display: inherit !important;
+    }
+
     #split {
         flex-direction: column;
     }
